--- a/index.html
+++ b/index.html
@@ -33,25 +33,26 @@
                 <h4>数据分析师</h4>
 
                 <h6><a href="http://muzhuyu.com" target="_blank">微博：@沐竹雨</a></h6>
+                <p>手机号码：<a href="tel:18829348932">18829348932</a> </p>
                 <p><a href="mailto:king@muzhuyu.com">king@muzhuyu.com</a></p>
             </div>
             
           
-            <div class="section center" id="profession">
+            <div class="section center" id="Skill">
                 <h1>擅长技术</h1>
                 <div class="tag-panel">
                     <div class="tag expert">Office</div>
-                    <div class="tag familiar">PS</div>
+                    <div class="tag familiar">Tableau</div>
                 </div>
                 <div class="tag-panel">
                     <div class="tag expert">CorelDraw</div>
                     <div class="tag expert">会声会影</div>
                     <div class="tag expert">Pr</div>
                     <div class="tag familiar">Power Bi</div>
-                    <div class="tag familiar">Tableau</div>
+                    <div class="tag familiar">PS</div>
                 </div>
                 <div class="tag-panel">
-                    <div class="tag familiar">Tableau</div>
+                    <div class="tag familiar">Python</div>
                     <div class="tag familiar">Mysql数据库管理</div>
                     <div class="tag">CRM</div>
                 </div>
