--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <h6><a href="http://muzhuyu.com" target="_blank">微博：@沐竹雨</a></h6>
                 <h7>手机号码：<a href="tel:18829348932">18829348932</a> </h7>
-                <h7><a href="mailto:king@muzhuyu.com">king@muzhuyu.com</a></h7>
+                <h7>邮箱地址：<a href="mailto:king@muzhuyu.com">king@muzhuyu.com</a></h7>
             </div>
             
           
@@ -97,8 +97,8 @@
                 <h1>目前供职</h1>
                 <h2>榆林市长盛集团路桥有限公司  技术员</h2>
                 <h3>2018年9月 - 至今</h3>
-                <h4>前期负责高速公路道路放样测量，保证高速公路正确标准的施工，有安全员C证，负责部分安全管理工作。</h4>
-                <h4>后期负责编制日报，月报，对项目的数据信息进行整理，制作图表，给领导提供项目上的数据支持，以作出正确政策决定。</h4>
+                <h6>前期负责高速公路道路放样测量，保证高速公路正确标准的施工，有安全员C证，负责部分安全管理工作。</h6>
+                <h6>后期负责编制日报，月报，对项目的数据信息进行整理，制作图表，给领导提供项目上的数据支持，以作出正确政策决定。</h6>
                 <p>工作地点：延安</p>
                 <h5>涉及数据可视化、Excel、PPT、Word、PS、Tableau、Power Bi等</h5>
             </div>
