--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <h4>数据分析师</h4>
 
                 <h6><a href="http://muzhuyu.com" target="_blank">微博：@沐竹雨</a></h6>
-                <h7>手机号码：<a href="tel:18829348932">18829348932</a> </h7>
-                <h7>邮箱地址：<a href="mailto:king@muzhuyu.com">king@muzhuyu.com</a></h7>
+                <p><h7>手机号码：<a href="tel:18829348932">18829348932</a> </h7></p>
+                <p><h7>邮箱地址：<a href="mailto:king@muzhuyu.com">king@muzhuyu.com</a></h7></p>
             </div>
             
           
